# pipeline

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  download.sh  fit_gaia_rv_uncertainty.ipynb  gaia_rv_jitter_apogee.ipynb  gaia_rv_orbit_fit.ipynb  pyproject.toml  requirements.txt  setup.py
.github/scripts/: compile-paper.sh
.github/workflows/: docker-image.yml  docker-paper.yml  paper.yaml  pipeline.yaml  pre-commit.yaml  style.yaml
config/: config.yaml  noise.yaml  sims.yaml  simulations.yaml  test-noise.yaml
notebooks/: fit_gaia_rv_uncertainty.ipynb  gaia_rv_jitter_apogee.ipynb  gaia_rv_orbit_fit.ipynb  gold-sample.ipynb  kepler-eb.ipynb  rv-uncert.ipynb  sb9-xmatch-edr3.ipynb
paper/: .gitignore  Makefile  compile-paper.sh  one-datum.bib  one-datum.tex
paper/figures/: .gitignore  Dockerfile  README.md  demo_figure.py  figure_rv_uncert_contour.ipynb  figure_rv_uncert_contour.py  figure_sim_rv_uncertainty.ipynb  figure_sim_rv_uncertainty.py  githash.aux  githash.tex  jupytext.toml  make-figures.sh  matplotlibrc  sim_rv_uncertainty.py
resources/data/: kepler-ebs.csv
scripts/: download  infer-per-transit-uncert
simulations/: config.yaml
src/one_datum/: __init__.py  model.py  noise_model.py  uncertainty.py
tests/: test_bulk_ncx2.py
tests/noise_model/: config.yaml  noise.yaml
workflow/: Snakefile
workflow/envs/: base.yaml  baseline.yml  environment.yml  figures.yml  inference.yml  munge.yml  noise.yaml  noise.yml  queries.yaml  requirements.txt
workflow/metadata/: archive.yaml  xmatch.yaml  (+2 more)
(+50 files in other folders)
